[package]
name = "bcr-common"
version = "0.7.0"
edition = "2024"
license = "MIT"

[features]
default = ["wallet"]
test-utils = ["rand", "mockall"]
wallet = ["cashu/wallet", "cdk/wallet", "cdk-common/wallet" ]
mint = ["cashu/mint", "cdk-common/mint"]

[dependencies]
async-trait = {version = "0.1"}
bdk_wallet = {version = "2.1"}
bip39 = {version = "2.2"}
bitcoin = {version = "0.32", features = ["serde"]}
borsh = {version = "1.5", features = ["derive"]}
cashu = {version = "=0.13.1", features = ["swagger"]}
cdk = {version = "=0.13.1", default-features = false}
cdk-common = {version = "=0.13.1"}
chrono = {version = "0.4", features = ["serde"]}
ciborium = {version="0.2"}
infer = {version="0.19"}
mockall = {version = "0.13", optional = true}
nostr = {version = "0.43"}
rand = {version = "0.8", optional = true}
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
serde = {version = "1.0"}
serde_json = {version = "1.0"}
serde_repr = {version = "0.1"}
strum = {version = "0.27", features = ["derive"]}
thiserror = {version = "2.0"}
url = {version = "2.5"}
utoipa = {version = "5.4", features = ["chrono", "uuid", "url"]}
uuid = {version = "1", features = ["serde"]}

[dev-dependencies]
bcr-common = {path = ".", features = ["test-utils"]}
