[package]
name = "bcr-common"
version = "0.8.0"
edition = "2024"
license = "MIT"

[features]
default = ["wallet"]
test-utils = []
wallet = ["cashu/wallet", "cdk-common/wallet" ]
mint = ["cashu/mint", "cdk-common/mint"]
clwdr-client = ["dep:async-nats", "dep:bytes", "dep:frost-secp256k1-tr"]

[dependencies]
async-nats = {version = "0.49", optional = true}
bip39 = {version = "2.2"}
bitcoin = {version = "0.32", features = ["serde"]}
borsh = {version = "1.5", features = ["derive"]}
bytes = {version = "1", optional = true}
cashu = {version = "=0.16.0", features = ["swagger"]}
cdk-common = {version = "=0.16.0"}
chrono = {version = "0.4", features = ["serde"]}
ciborium = {version="0.2"}
frost-secp256k1-tr = { version = "2.2.0", features = ["serde"], optional = true }
infer = {version="0.19"}
nostr = {version = "0.43"}
rand = {version = "0.8"}
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
serde = {version = "1.0"}
serde_json = {version = "1.0"}
serde_repr = {version = "0.1"}
strum = {version = "0.27", features = ["derive"]}
thiserror = {version = "2.0"}
tracing = {version = "0.1"}
url = {version = "2.5"}
utoipa = {version = "5.4", features = ["chrono", "uuid", "url"]}
uuid = {version = "1", features = ["serde"]}

[dev-dependencies]
bcr-common = {path = ".", features = ["test-utils"]}
mockito = {version = "1.7"}
tokio = {version = "1"}
